# opencode-stats

./: .gitignore  AGENT.md  AGENTS.md  Cargo.toml  LICENSE  README.md  README_CN.md
.github/workflows/: release.yml
docs/: config.md  themes.md
spec/: plan.md
src/: main.rs
src/analytics/: daily.rs  heatmap_data.rs  mod.rs  model_stats.rs  monthly.rs  weekly.rs
src/cache/: http_client.rs  mod.rs  models_cache.rs  opencode_config.rs
src/config/: app_config.rs  errors.rs  mod.rs  theme_config.rs
src/db/: connection.rs  models.rs  queries.rs
src/ui/: app.rs  export.rs  mod.rs  models.rs  overview.rs  theme.rs
src/ui/widgets/: common.rs  heatmap.rs  linechart.rs  mod.rs
src/utils/: formatting.rs  mod.rs  pricing.rs  time.rs
