[package]
name = "oc-stats"
description = "A terminal dashboard for OpenCode usage statistics"
version = "1.2.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
arboard = "3.6.1"
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
image = "0.25.8"
imageproc = "0.25.0"
json5 = "1.3.1"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust_decimal = { version = "1.40.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
colored = "3.1.1"
itertools = "0.14.0"
unicode-width = "0.2.2"
