[package]
name = "opencode-stats"
description = "A terminal dashboard for OpenCode usage statistics inspired by the /stats command in Claude Code"
version = "1.3.6"
edition = "2024"
authors = ["Cateds <this.id.was.used@outlook.com>"]
license = "MIT"
repository = "https://github.com/Cateds/opencode-stats"
categories = ["command-line-utilities", "visualization"]
keywords = ["opencode", "cli", "tui", "dashboard", "statistics"]
readme = "README.md"

[[bin]]
name = "oc-stats"
path = "src/main.rs"

[dependencies]
ab_glyph = "0.2.32"
arboard = "3.6.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
image = "0.25.10"
imageproc = "0.26.1"
json5 = "1.3.1"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rust_decimal = { version = "1.41.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
colored = "3.1.1"
terminal-light = "1.8.0"
itertools = "0.14.0"
unicode-width = "0.2.2"
futures = "0.3.32"
clap_complete = "4.6.2"
color-eyre = "0.6.5"
